v0.0.7 (XXX)
- Added support for creating new pages from a template file (pdf/png/jpg/gif/svg/probably more)
- Convert the params to start_new_page to be an options hash

v0.0.6 (28th April 2008)
- Fix a nasty bug in text layout code

v0.0.5 (27th April 2008)
- Fix crash when inserting multiple images
- added PDF::Wrapper#pad
- added PDF::Wrapper#text_width
- added support for customisable page margins (thanks to Paweł Kondzior)
- added support for cubic Bezier spline paths (thanks to Paweł Kondzior)
- added support for specifying the width of a cell border (thanks to Paweł Kondzior)
- fixed alignment of text (thanks to Paweł Kondzior)

v0.0.4 (12th March 2008)
- added support for custom line widths on primitive drawing shapes (circles,
  lines, etc). Thanks Paweł Kondzior
- fixed a bug where the first line of text in a multi-line cell appeared at the
  current cursor location instead of inside the cell. Thanks Paweł Kondzior
- bumped dependency on PDF::Reader for running specs to 0.6.1

v0.0.3 (17th January 2008)
- added support for repeating elements (like page numbers) via repeating_element
- Ensured consistent behaviour WRT functions moving the internal cursor
  - functions that require positioning info (cell, shapes, etc) will not move
    the cursor at all
  - functions where positioning info in optional (text, image, etc), the cursor
    will be moved to the bottom left corner of the object
- Ensure no unrecognised options are provided to various functions
- Add support for padding between a cell border and its text
- added support for scaling images proportionally
- expanded spec coverage

v0.0.2 (11th January 2008)
- Added support for a range of extra image formats (jpg, pdf, gif, etc)
- Various documentation improvements
- improved the text functions a little, but still lots more to go

v0.0.1 (9th January 2008)
- Initial, pre-alpha, eats small children for breakfast release