@@ -1,6 +1,7 @@
 v0.0.7 (XXX)
 - Added support for creating new pages from a template file (pdf/png/jpg/gif/svg/probably more)
 - Convert the params to start_new_page to be an options hash
+- Added a :padding option to PDF::Wrapper#image
 
 v0.0.6 (28th April 2008)
 - Fix a nasty bug in text layout code
